fix vertical module alignment

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ button:hover {
   width: 100%;
   margin-top: 0px;
   padding: 0px;
-  padding-top: 100px;
+  padding-top: 50px;
 }
 
 .module.active {
@@ -80,7 +80,7 @@ button:hover {
   position: fixed;
   margin-top: 0px;
   padding: 0px;
-  padding-top: 100px;
+  padding-top: 50px;
 }
 
 #subModules {
